--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+.margin-auto-center {
+  margin: 0 auto;
+}
+
 .h1-icon {
   display: flex;
   align-items: center;
@@ -179,7 +183,6 @@ form {
 }
 
 .submit-btn {
-  margin: 0 auto;
   margin-top: 30px;
   width: 100%;
   max-width: 300px;
@@ -447,20 +450,26 @@ nav img {
 .user-profile-picture {
   width: 50px;
   height: 50px;
+}
+
+.user-profile-picture img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
   border-radius: 8%;
-  background: url(./assets/profile-pic-template.png) no-repeat center center;
-  background-size: cover;
 }
 
 .sample-title-progress {
   text-align: left;
   width: 250px;
+  overflow: hidden;
 }
 
 .attribute-container {
   border-left: 0.5px solid rgb(197, 197, 197);
   padding-left: 11px;
   height: 100%;
+  width: 40px;
 }
 
 .attribute {
@@ -1074,8 +1083,10 @@ footer {
   display: flex;
   align-items: center;
   padding: 8px 12px;
-  background-color: var(--secondary-color);
-  color: white;
+
+  /* background-color: var(--secondary-color); */
+  /* color: white; */
+  color: var(--secondary-color);
   border-radius: 8px;
   border: none;
   gap: 8px;
@@ -1083,8 +1094,8 @@ footer {
 }
 
 .redirect-button:hover {
-  background-color: var(--link-hover);
-  color: white;
+  /* background-color: var(--link-hover); */
+  color: var(--link-hover);
 }
 
 /********* - Tag Manager - **********/
@@ -1178,12 +1189,10 @@ footer {
 .sub-nav-items-container {
   display: flex;
   align-items: center;
-
   padding: 0.3rem 0.4rem 0.3rem 0.4rem;
   background-color: #e9e9e9;
-
+  color: #1c1c1c;
   border-radius: 30px;
-  font-size: 14px;
   box-shadow: inset 0px 1px 4px -1px rgba(0, 0, 0, 0.17);
   margin-top: 0;
   height: 35px;
@@ -1195,6 +1204,18 @@ footer {
 
 .my-sample-library-icon {
   font-size: 1.2rem;
+}
+
+.nav-item div {
+  font-weight: 500;
+  transition: 0.15s ease-in-out;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  display: flex;
+  cursor: pointer;
+}
+
+.nav-item div.active {
+  pointer-events: none;
 }
 
 .profile-picture-container {
@@ -1209,7 +1230,7 @@ footer {
 .profile-picture-container img {
   object-fit: cover;
   width: 100%;
-
+  height: 100%;
   border-radius: 50%;
 }
 
@@ -1231,6 +1252,10 @@ footer {
   font-weight: 500;
   opacity: 0;
   gap: 10px;
+}
+
+.edit-profile-picture-icon {
+  font-size: 1.2rem;
 }
 
 .edit-profile-picture:hover {
@@ -1329,49 +1354,56 @@ dialog {
   background-color: var(--cancel-color);
 }
 
-/********* - User Message Popup - **********/
+/********* - Notification Popup - **********/
+.notification {
+  position: fixed;
+  bottom: -100px;
+  right: 30%;
+  left: 30%;
+  background: rgb(249, 249, 249);
+  padding: 0px 12px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  transition: top 0.5s ease-in-out;
+  z-index: 1000;
+  animation: slideIn 0.5s forwards, fadeOut 0.5s 2.5s forwards;
+  border-top: 1px solid rgb(197, 197, 197);
+  border-left: 1px solid rgb(197, 197, 197);
+  border-right: 1px solid rgb(197, 197, 197);
+}
 
-@keyframes slideUp {
-  0% {
-    transform: translateY(100%);
-    opacity: 0;
+/* When the notification is visible, slide it in */
+.notification.show {
+  bottom: 0px;
+}
+
+.icon-text-container-message {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Keyframes for sliding in */
+@keyframes slideIn {
+  from {
+    bottom: -100px;
   }
-  100% {
-    transform: translateY(0);
+  to {
+    bottom: 0px;
+  }
+}
+
+/* Keyframes for fading out */
+@keyframes fadeOut {
+  from {
     opacity: 1;
   }
+  to {
+    opacity: 0;
+  }
 }
-
-.user-message-popup {
-  animation: slideUp 0.5s ease-out forwards;
-  position: fixed;
-  bottom: 0;
-  left: 75%;
-
-  width: 320px;
-  background-color: rgb(247, 247, 247);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  padding: 16px 34px;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
-  z-index: 50;
-  color: #1c1c1c;
-  border: none;
-  font-size: 1.1rem;
-  display: flex;
-  justify-content: center;
-  height: 50px;
-}
-
-.message-container {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-/* other styles */
 
 /********* - 404 Page - **********/
 
@@ -1418,5 +1450,32 @@ dialog {
 
   .logout-button.show {
     display: block;
+  }
+
+  .user-stats {
+    gap: 1rem;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  #root {
+    overflow: hidden;
+  }
+  /********* - Sample-Player **********/
+  .tags-list {
+    display: none;
+  }
+
+  .sample-title-progress {
+    text-align: left;
+    width: 150px;
+    overflow: hidden;
+  }
+  .attribute-container {
+    display: none;
+  }
+
+  .sample-player-button.download-button {
+    display: none;
   }
 }
